# middleware/authMiddleware.js
@@ -1,0 +1,17 @@
+const jwt = require('jsonwebtoken');
+
+const SECRET = process.env.JWT_SECRET || 'segredo-super-seguro';
+
+function authenticateToken(req, res, next) {
+	const authHeader = req.headers['authorization'];
+	const token = authHeader && authHeader.split(' ')[1];
+	if (!token) return res.status(401).json({ message: 'Token não fornecido' });
+
+	jwt.verify(token, SECRET, (err, user) => {
+		if (err) return res.status(403).json({ message: 'Token inválido' });
+		req.user = user;
+		next();
+	});
+}
+
+module.exports = authenticateToken;
